# lattice

./: .gitignore  .toolchain.env  README.md  pyproject.toml
.agents/: hooks.json
.codex/: hooks.json
.gemini/: settings.json
.kb/: 001-untitled.cue  002-untitled.cue  003-directory-contract.cue  index.cue  insight-001.cue  insight-002.cue  manifest.cue  new-pattern-1.cue  new-pattern-2.cue  new-pattern.cue  project.cue  rejected-001.cue  rejected-002.cue  rejected-003.cue  self-context.cue
cue.mod/: module.cue
docs/: code-intel-profile.md  control_profile_toImpl.md  domain.md  graph-state-promotion-plan.md  idioms.md  patterns.md  patterns_toImpl.md  sources.md
domain/: kernel.cue  kernel_regression.cue  negative_fixture_proof_regression.cue
exports/: code_intel_profile_expectation.cue  idiom_catalog.cue  pillar_expectations.cue
idioms/: attributes.cue  bounds.cue  closedness.cue  comprehensions.cue  constructors.cue  cue_by_example.cue  cycles.cue  defaults.cue  definitions.cue  disjunctions.cue  hidden-and-let.cue  lists.cue  negative-fixtures.cue  official_docs.cue  projections.cue  sources.cue  subsumption.cue  top-and-bottom.cue  unification.cue
meta/: kernel.cue  model.cue
patterns/: adapter_pillars.cue  attributes.cue  bounds.cue  catalog.cue  closedness.cue  comprehensions.cue  constructors.cue  contract_pillars.cue  cycles.cue  defaults.cue  definitions.cue  disjunctions.cue  hidden-and-let.cue  hidden_and_let.cue  idiom_families.cue  language_pillars.cue  lists.cue  negative-fixtures.cue  negative_fixtures.cue  pillars.cue  projections.cue  schema.cue  subsumption.cue  tool_commands.cue  top-and-bottom.cue  top_and_bottom.cue  unification.cue
pillars/: attributes.cue  bounds.cue  closedness.cue  comprehensions.cue  cycles.cue  (+11 more)
(+301 files in other folders)
